# vectorvfs

./: .readthedocs.yaml  CITATION.cff  Makefile  README.md  codex.md  pyproject.toml  requirements.txt
docs/: requirements-docs.txt
docs/source/: architecture.rst  conf.py  index.rst  installation.rst  usage.rst
tests/: test_vfsstore.py
vectorvfs/: cli.py  encoders.py  utils.py  vfsstore.py
